--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+body {
+    background-color: gray;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+}
+
+.playerContainer {
+    background-color: azure;
+    padding: 20px;
+}
+
+.computerContainer{
+    background-color: red;
+    padding: 50px;
+    margin-left: 5%;
+}
+
 img {
     width: 50px;
     height: auto;
