--- a/style.css
+++ b/style.css
@@ -1,22 +1,38 @@
 body {
-    background-color: gray;
     display: flex;
-    justify-content: center; 
-    align-items: center;
+    flex-direction: column;
+    text-align: center;
 }
 
 .playerContainer {
     background-color: azure;
     padding: 20px;
+    display: flex;
+    justify-content: space-evenly;
 }
 
-.computerContainer{
-    background-color: red;
-    padding: 50px;
-    margin-left: 5%;
+.enemyContainer {
+    display: flex;
+    background-color: bisque;
+}
+
+.enemyContainer img {
+   height: 250px;
+   width: 250px;
+   margin-right: 30px;
+}
+
+button {
+    background: transparent;  
 }
 
 img {
-    width: 50px;
-    height: auto;
+    padding: 0;
+    margin: 0;
+}
+
+.enemyContainer p {
+    flex: 1;
+    align-self: center;
+    text-align: left;
 }
